update green color

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   --color-wedding-red: #7a0000;
 
   --color-wedding-green-light: #45cf6c;
-  --color-wedding-green: #007a23;
+  --color-wedding-green: #1d8f3d;
   --font-heading: "Eyesome Script", sans-serif;
   --font-body: "DM Sans", sans-serif;
 }
